--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/TryGhost/Ghost.git"
+    "url": "git://github.com/cronvel/Ghost.git"
   },
   "bugs": "https://github.com/TryGhost/Ghost/issues",
   "contributors": "https://github.com/TryGhost/Ghost/graphs/contributors",
@@ -20,10 +20,6 @@
   "scripts": {
     "start": "node index",
     "test": "grunt validate --verbose"
-  },
-  "engines": {
-    "node": "~0.10.0 || ~0.12.0",
-    "iojs": "~1.2.0"
   },
   "dependencies": {
     "bcryptjs": "2.3.0",
@@ -59,7 +55,7 @@
     "request": "2.65.0",
     "rss": "1.2.0",
     "semver": "5.0.3",
-    "showdown-ghost": "0.3.6",
+    "showdown-ghost": "cronvel/showdown",
     "sqlite3": "3.1.0",
     "unidecode": "0.1.7",
     "validator": "4.1.0",
